# port-guardian

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  port_scanner.rs  process_resolver.rs  process_tree.rs  safety_checker.rs  service_classifier.rs  terminator.rs  windows_command.rs
src/components/: ConfirmKillDialog.tsx  PortTable.tsx  RiskBadge.tsx  SearchBar.tsx  ServiceDetail.tsx  Settings.tsx  SourceIcon.tsx  UpdateChecker.tsx
src/i18n/: index.tsx
src/i18n/locales/: en.ts  zh.ts
src/utils/: updateErrors.ts
